Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120531

lupdate doesn't understand template literals

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 6.6.1
    • Tools: Linguist
    • None
    • All
    • e92e844a5 (dev), c18fde593 (6.7), 5b2c12e1d (6.6)

    Description

      lupdate fails to extract qsTr strings if they are using template literals, i.e.

      text: qsTr(`template literal`)
      

      this is particularly annoying because qmllint suggests to use template literals for multiline strings and thus if you don't pay attention you end up with untranslatable strings.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lugerard Lucie Gerard
            albert.astals.cid.avid Albert Astals Cid
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews