lupdate: Add support for template literal as translation source in qml files

Task-number: QTBUG-120531
Pick-to: 6.6 6.7
Change-Id: I8a4ede2e1fbd79e4764e4ef3438e18d7d73ee204
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>