tests/auto/linguist/lupdate/testdata/good/parseqml/main.qml
@@ -99,5 +99,9 @@ QtObject {
 
         //~ quoted " string with spaces "
         qsTr("translation with extras-quoted field");
+
+	// template literals are supported
+        qsTr(`template literal`);
+        qsTranslate("TemplateLiteral", 'template literal 2');
     }
 }
